     2.5.3: TBD...

       NEW: Set and read squelch via remote control socket.
  IMPROVED: Reworked CW reception so that channel is now centered on carrier.
  IMPROVED: Shortcuts for view/hide some of the dock widgets.

     2.5.2: Released Januar 21, 2016.

       NEW: Support for Red Pitaya (RX only).
       NEW: Build with GNU Radio 3.7.9.
  IMPROVED: Increased spacing between frequency divisions to prevent overlap.
  IMPROVED: Reduced minimum window size requirement to around 800x600 pixels.

       2.5  Released January 7, 2016

       NEW: Read out signal time and on the waterfall (disabled on OS X).
       NEW: Save waterfall to graphics file.
       NEW: Allow user settable waterfall time span (up to 24 hours).
       NEW: Cmake option to build using gr-audio backend (Andrea Merello).
     FIXED: FM stereo (revert to pre-2.4 behavior).
     FIXED: Mode selector not updated when selecting a WFM OIRT bookmark.
     FIXED: Show correct filter preset when filter LO/HI corresponds to one.
     FIXED: Prevent RDS panel from growing by making it scrollable.
     FIXED: Use correct audio backend on OS X (app bundle only).
  IMPROVED: Button layouts (mostly on Mac OS X).


       2.4  Released December 14, 2015

       NEW: Bookmarks.
       NEW: FM RDS decoder using gr-rds.
       NEW: Frequency tooltips on the FFT area (disabled on Mac).
       NEW: Filter shape selector (soft, normal, sharp).
       NEW: Slider to aid zooming on the frequency and dB axes.
       NEW: RFSpace Cloud-IQ support.
       NEW: OIRT stereo decoder (Daniil Cherednik).
       NEW: Input decimator.
     FIXED: Prevent crash due to device errors while starting the application.
     FIXED: Use hardware frequency in IQ file names.
     FIXED: FFT averaging (it can now be disabled).
     FIXED: "Could not resolve pattern10600" error messages in the terminal.
     FIXED: Antenna selection error with USRP B210 (Ethan Trewhitt).
     FIXED: LNB LO value not updated in I/O config dialog.