@@ -3,6 +3,7 @@
        NEW: Set and read squelch via remote control socket.
   IMPROVED: Reworked CW reception so that channel is now centered on carrier.
   IMPROVED: Shortcuts for view/hide some of the dock widgets.
+  IMPROVED: Respond to dump_state remote command (needed by some clients).
 
      2.5.2: Released Januar 21, 2016.
 
